[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/Player_hack/Player_hack.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player_hack/target.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player_hack/Player_hack.gd" type="Script" id=3]
[ext_resource path="res://maps/map_sistema/blocks_maps.tres" type="MeshLibrary" id=4]
[ext_resource path="res://props/blocks/block_gray.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/enemy_hack.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/enemy_hack_stop.tscn" type="PackedScene" id=7]
[ext_resource path="res://maps/mine_games/game2.gd" type="Script" id=8]
[ext_resource path="res://player/UI/complete_game.tscn" type="PackedScene" id=9]
[ext_resource path="res://maps/mine_games/complete_game1.gd" type="Script" id=10]
[ext_resource path="res://maps/mine_games/Porta.tscn" type="PackedScene" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 51.0815, 0.00113748, 51.2902 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )
ground_bottom_color = Color( 0.101961, 0.101961, 0.101961, 1 )
ground_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
glow_enabled = true
glow_strength = 0.87
glow_bloom = 0.43
glow_blend_mode = 1

[sub_resource type="CubeMesh" id=6]

[sub_resource type="BoxShape" id=7]

[node name="game" type="Spatial"]
script = ExtResource( 8 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03505, 0 )
shape = SubResource( 1 )

[node name="target" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0.264046, 0 )

[node name="Player_hack" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.231491, 0 )
script = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.52279, 5.11439 )
visible = false
omni_range = 12.0383

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="blocks_gray" type="Spatial" parent="."]

[node name="block_gray" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0.0130889, 1.00455, 6.97352 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
data = {
"cells": PoolIntArray( 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 21, 0, 0, 65513, 0, 0, 13, 1, 0, 21, 1, 1610612736, 65513, 1, 0, 13, 2, 0, 21, 2, 0, 65513, 2, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 21, 3, 0, 65513, 3, 0, 21, 4, 0, 65513, 4, 0, 21, 5, 0, 65513, 5, 0, 21, 6, 0, 65513, 6, 0, 8, 7, 0, 10, 7, 0, 12, 7, 0, 14, 7, 0, 16, 7, 0, 21, 7, 0, 65513, 7, 0, 65518, 7, 0, 65520, 7, 0, 65522, 7, 0, 65524, 7, 0, 65526, 7, 0, 21, 8, 0, 65513, 8, 0, 8, 9, 0, 21, 9, 0, 65513, 9, 0, 65526, 9, 0, 21, 10, 0, 65513, 10, 0, 8, 11, 0, 21, 11, 0, 65513, 11, 0, 65526, 11, 0, 21, 12, 0, 65513, 12, 0, 8, 13, 0, 21, 13, 0, 65513, 13, 0, 65526, 13, 0, 21, 14, 0, 65513, 14, 0, 8, 15, 0, 21, 15, 0, 65513, 15, 0, 65526, 15, 0, 21, 16, 0, 65513, 16, 0, 21, 17, 0, 65513, 17, 0, 21, 18, 0, 65513, 18, 0, 21, 19, 0, 65513, 19, 0, 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 20, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 20, 0, 13, 20, 0, 14, 20, 0, 15, 20, 0, 16, 20, 0, 17, 20, 0, 18, 20, 0, 19, 20, 0, 20, 20, 0, 21, 20, 0, 65513, 20, 0, 65514, 20, 0, 65515, 20, 0, 65516, 20, 0, 65517, 20, 0, 65518, 20, 0, 65519, 20, 0, 65520, 20, 0, 65521, 20, 0, 65522, 20, 0, 65523, 20, 0, 65524, 20, 0, 65525, 20, 0, 65526, 20, 0, 65527, 20, 0, 65528, 20, 0, 65529, 20, 0, 65530, 20, 0, 65531, 20, 0, 65532, 20, 0, 65533, 20, 0, 65534, 20, 0, 65535, 20, 0, 0, 65519, 0, 1, 65519, 0, 2, 65519, 0, 3, 65519, 0, 4, 65519, 0, 5, 65519, 0, 6, 65519, 0, 7, 65519, 0, 8, 65519, 0, 9, 65519, 0, 10, 65519, 0, 11, 65519, 0, 12, 65519, 0, 13, 65519, 0, 14, 65519, 0, 15, 65519, 0, 16, 65519, 0, 17, 65519, 0, 18, 65519, 0, 19, 65519, 0, 20, 65519, 0, 21, 65519, 0, 65513, 65519, 0, 65514, 65519, 0, 65515, 65519, 0, 65516, 65519, 0, 65517, 65519, 0, 65518, 65519, 0, 65519, 65519, 0, 65520, 65519, 0, 65521, 65519, 0, 65522, 65519, 0, 65523, 65519, 0, 65524, 65519, 0, 65525, 65519, 0, 65526, 65519, 0, 65527, 65519, 1073741824, 65528, 65519, 0, 65529, 65519, 0, 65530, 65519, 0, 65531, 65519, 0, 65532, 65519, 0, 65533, 65519, 0, 65534, 65519, 0, 65535, 65519, 0, 21, 65520, 0, 65513, 65520, 0, 21, 65521, 0, 65513, 65521, 0, 21, 65522, 0, 65513, 65522, 0, 21, 65523, 0, 65513, 65523, 0, 8, 65524, 0, 21, 65524, 0, 65513, 65524, 0, 65526, 65524, 0, 21, 65525, 0, 65513, 65525, 0, 8, 65526, 0, 21, 65526, 0, 65513, 65526, 0, 65526, 65526, 0, 21, 65527, 0, 65513, 65527, 0, 8, 65528, 0, 21, 65528, 0, 65513, 65528, 0, 65526, 65528, 0, 21, 65529, 0, 65513, 65529, 0, 8, 65530, 0, 21, 65530, 0, 65513, 65530, 0, 65526, 65530, 0, 21, 65531, 0, 65513, 65531, 0, 8, 65532, 0, 10, 65532, 0, 12, 65532, 0, 14, 65532, 0, 16, 65532, 0, 21, 65532, 0, 65513, 65532, 0, 65518, 65532, 0, 65520, 65532, 0, 65522, 65532, 0, 65524, 65532, 0, 65526, 65532, 0, 21, 65533, 0, 65513, 65533, 0, 21, 65534, 0, 65513, 65534, 0, 21, 65535, 0, 65513, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="enemy_hack" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.9223, 0.32888, 22.8414 )

[node name="enemy_hack2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.9916, 0.278057, -15.1298 )

[node name="enemy_hack3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27.0088, 0.652801, -14.9216 )

[node name="enemy_hack4" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.05138, 0.412804, -28.0352 )

[node name="enemy_hack5" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27.1467, 0.474995, 23.0888 )

[node name="enemy_hack6" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.90861, 0.32888, -27.9757 )

[node name="enemy_hack_stop" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.0126715, 0.763444, 24.2767 )

[node name="done_game" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.0153, 1.03437, 3.99397 )
mesh = SubResource( 6 )
material/0 = null

[node name="Area" type="Area" parent="done_game"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.316017, 0, 0 )
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="done_game/Area"]
shape = SubResource( 7 )

[node name="complete_game" parent="." instance=ExtResource( 9 )]

[node name="Timer_reset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Porta" parent="." instance=ExtResource( 11 )]
transform = Transform( -4.88762e-07, 0, 1, 0, 1, 0, -3, 0, -1.62921e-07, 21, 1, 4 )
[connection signal="body_entered" from="done_game/Area" to="done_game/Area" method="_on_Area_body_entered"]

[editable path="Porta"]
